fixing theme when restart in dark mode

--- a/style.css
+++ b/style.css
@@ -76,7 +76,8 @@ h1 {
   gap:1rem;
 }
 .cell{
- border: 0.5px solid black;
+ font-size: 2rem;
+ order: 0.5px solid black;
  background-color: var(--cell);
  border-radius: 5px;
  display: flex;
